# coldpress-project

./: .gitignore  README.md  pyproject.toml
examples/: hsc_sample.fits
src/coldpress/: __init__.py  _cli.py  cli.py  decode.py  encode.py  stats.py  utils.py
