[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coldpress"
version = "1.0.0"
authors = [
  { name="Antonio Hernán Caballero", email="ahernan@cefca.es" },
]

description = "Efficient compression for redshift probability distribution functions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = ["numpy", "astropy", "matplotlib"]

[project.scripts]
coldpress = "coldpress._cli:main"

[project.urls]
Homepage = "https://github.com/ahc-photoz/coldpress-project"
Issues = "https://github.com/ahc-photoz/coldpress-project/issues"
